<resources>
    <string name="app_name">GPTalk</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">GPTalk</string>
    <string name="second_fragment_label">Setting</string>

    <string name="todo">TODO</string>
    <string name="text_temperature">Temperature (0.1 ~ 1.0)</string>
    <string name="text_frequency_panalty">Frequency Panalty (–2.0 ~ 2.0)</string>
    <string name="temperature">Temperature</string>
    <string name="frequency_panalty">Frequency Panalty</string>
    <string name="chat_reset">Chat Reset</string>
    <string name="share">Share</string>
    <string name="hint_message">메시지 입력</string>
    <string name="send">전송</string>
</resources>